--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "hubuide",
   "version": "1.0.0",
-  "description": "HubUIDE una aplicación de encuentros para la comunidad UIDE que permite a los usuarios conocerse.",
+  "description": "HubUIDE, una aplicación de encuentros para la comunidad UIDE que permite a los usuarios conocerse.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "firebase serve",   
+    "deploy": "firebase deploy"   
+  },
+  "dependencies": {
+    "firebase-tools": "^13.27.0"  
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": ">=18.0.0"  
+  }
 }
