--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -3,28 +3,28 @@ name: Deploy to Firebase Hosting
 on:
   push:
     branches:
-      - main  # Cambia esto si tu rama principal tiene otro nombre
+      - Daddy  # Asegúrate de que el nombre de la rama sea correcto
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'  # Asegúrate de usar una versión >=18
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'  # Asegúrate de usar una versión >=18
 
-    - name: Install dependencies
-      run: npm install  # Instala las dependencias desde package.json
+      - name: Install dependencies
+        run: npm install  # Instala las dependencias desde package.json
 
-    - name: Install Firebase CLI
-      run: npm install -g firebase-tools  # Instala Firebase CLI
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools  # Instala Firebase CLI
 
-    - name: Deploy to Firebase Hosting
-      run: firebase deploy --only hosting
-      env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+      - name: Deploy to Firebase Hosting
+        run: firebase deploy --only hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
