--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Se ejecuta cuando hay cambios en main
+      - main
 
 jobs:
   build:
@@ -23,13 +23,27 @@ jobs:
         run: |
           pip install -r requirements.txt
 
-      - name: Debug List Files  # Removed the colon from the name
-        run: ls -R  # ✅ Muestra la estructura del repo para verificar rutas
+      - name: Debug Working Directory
+        run: |
+          echo "Current working directory:"
+          pwd
+          echo "\nRepository contents:"
+          ls -la
+          echo "\nComplete directory structure:"
+          find . -type f
 
       - name: Build the Flet App
         run: |
           mkdir -p build
-          python HubUIDE/app.py  # ✅ Ahora usa `HubUIDE/app.py`
+          # Use relative path and check if file exists first
+          if [ -f "HubUIDE/app.py" ]; then
+            python HubUIDE/app.py
+          elif [ -f "app.py" ]; then
+            python app.py
+          else
+            echo "Error: app.py not found in expected locations"
+            exit 1
+          fi
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -40,7 +54,7 @@ jobs:
   deploy:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
-    needs: build  # No se ejecuta si fallan las pruebas
+    needs: build
 
     permissions:
       pages: write
