--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -2,8 +2,24 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches:
+    branches: 
+      - master
       - main
+  pull_request:
+    branches: 
+      - master
+      - main
+  workflow_dispatch:
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
+env:
+  BUILD_NUMBER: 1
+  BUILD_VERSION: 1.0.0
+  PYTHON_VERSION: 3.10.16
+  FLUTTER_VERSION: 3.22.2
 
 jobs:
   build:
@@ -12,54 +28,61 @@ jobs:
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Setup Python ${{ env.PYTHON_VERSION }}
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Install Dependencies
+      - name: Install Python Dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Debug Working Directory
+      - name: Setup Flutter ${{ env.FLUTTER_VERSION }}
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+
+      - name: Debug Environment
         run: |
-          echo "Current working directory:"
-          pwd
-          echo "\nRepository contents:"
-          ls -la
-          echo "\nComplete directory structure:"
-          find . -type f
+          echo "Current directory structure:"
+          ls -R
+          echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}"
+          echo "Project Base URL: ${GITHUB_REPOSITORY#*/}"
 
       - name: Build the Flet App
         run: |
-          mkdir -p build
-          # Use relative path and check if file exists first
-          if [ -f "HubUIDE/app.py" ]; then
-            python HubUIDE/app.py
-          elif [ -f "app.py" ]; then
-            python app.py
-          else
-            echo "Error: app.py not found in expected locations"
-            exit 1
-          fi
+          flutter config --no-analytics
+          flet build web --base-url ${GITHUB_REPOSITORY#*/} --route-url-strategy hash
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: github-pages
-          path: "build"
+          name: web-build-artifact
+          path: build/web
 
   deploy:
     name: Deploy to GitHub Pages
     runs-on: ubuntu-latest
     needs: build
-
+    
     permissions:
       pages: write
       id-token: write
 
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
-      - name: Deploy GitHub Pages
-        uses: actions/deploy-pages@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+
+      - name: Deploy to GitHub Pages 🚀
+        if: github.event_name == 'push'
+        id: deployment
+        uses: actions/deploy-pages@v4.0.5
+        with:
+          artifact_name: web-build-artifact
