--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Web Build + Deployment to GitHub Pages
 
 on:
   push:
@@ -18,68 +18,77 @@ concurrency:
 env:
   BUILD_NUMBER: 1
   BUILD_VERSION: 1.0.0
-  PYTHON_VERSION: 3.10.16
+  PYTHON_VERSION: 3.12.2
   FLUTTER_VERSION: 3.22.2
 
 jobs:
   build:
-    name: Build & Test Cokhi
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Setup Python ${{ env.PYTHON_VERSION }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
+    - name: Install Linux Dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ninja-build libgtk-3-dev
+        
+    - name: Setup Python ${{ env.PYTHON_VERSION }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Install Python Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Install Python Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install flet-cli==0.25.0
 
-      - name: Setup Flutter ${{ env.FLUTTER_VERSION }}
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
+    - name: Setup Flutter ${{ env.FLUTTER_VERSION }}
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: ${{ env.FLUTTER_VERSION }}
 
-      - name: Debug Environment
-        run: |
-          echo "Current directory structure:"
-          ls -R
-          echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}"
-          echo "Project Base URL: ${GITHUB_REPOSITORY#*/}"
+    - name: Debug Directory Structure
+      run: |
+        echo "Current directory contents:"
+        ls -la
+        echo "Full repository structure:"
+        find . -type f
 
-      - name: Build the Flet App
-        run: |
-          flutter config --no-analytics
-          flet build web --base-url ${GITHUB_REPOSITORY#*/} --route-url-strategy hash
+    - name: Flet Build Web
+      run: |
+        echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}, USER: ${GITHUB_REPOSITORY%/*}, PROJECT_BASE_URL: ${GITHUB_REPOSITORY#*/}"
+        flutter config --no-analytics
+        if [ -f "HubUIDE/app.py" ]; then
+          flet build web --module-name HubUIDE/app.py --base-url ${GITHUB_REPOSITORY#*/} --route-url-strategy hash
+        elif [ -f "app.py" ]; then
+          flet build web --module-name app.py --base-url ${GITHUB_REPOSITORY#*/} --route-url-strategy hash
+        else
+          echo "Error: No app.py found in expected locations"
+          exit 1
+        fi
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          name: web-build-artifact
-          path: build/web
+    - name: Upload Artifact
+      uses: actions/upload-pages-artifact@v3
+      with:
+        name: web-build-artifact
+        path: build/web
 
   deploy:
-    name: Deploy to GitHub Pages
-    runs-on: ubuntu-latest
     needs: build
-    
+    runs-on: ubuntu-latest
     permissions:
       pages: write
       id-token: write
-
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
+      
     steps:
       - name: Setup Pages
         uses: actions/configure-pages@v5
-
+        
       - name: Deploy to GitHub Pages 🚀
         if: github.event_name == 'push'
         id: deployment
