--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -27,11 +27,6 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Install Linux Dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y ninja-build libgtk-3-dev
-        
     - name: Setup Python ${{ env.PYTHON_VERSION }}
       uses: actions/setup-python@v4
       with:
@@ -50,12 +45,15 @@ jobs:
         echo "Full repository structure:"
         find . -type f
 
+    - name: Set up build directory
+      run: mkdir -p build/web
+
     - name: Flet Build Web
       run: |
         if [ -f "HubUIDE/app.py" ]; then
-          flet build web --entry-point HubUIDE/app.py
+          python HubUIDE/app.py -w
         elif [ -f "app.py" ]; then
-          flet build web --entry-point app.py
+          python app.py -w
         else
           echo "Error: No app.py found in expected locations"
           exit 1
