--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -1,28 +1,21 @@
 name: Web Build + Deployment to GitHub Pages 
 
 on:
-  # Runs on push to any of the below branches
   push:
     branches: 
       - master
       - main
-  # Runs on pull request events that target one of the below branches
   pull_request:
     branches: 
       - master
       - main
-
-  # Allows you to run this workflow manually from the Actions tab of the repository
   workflow_dispatch:
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 env:
-  # https://flet.dev/docs/publish#versioning
   BUILD_NUMBER: 1
   BUILD_VERSION: 1.0.0
   PYTHON_VERSION: 3.12.2
@@ -57,9 +50,9 @@ jobs:
       run: |
         echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}, USER: ${GITHUB_REPOSITORY%/*}, PROJECT_BASE_URL: ${GITHUB_REPOSITORY#*/}"
         if [ -f "HubUIDE/app.py" ]; then
-          flet build web --entry-point HubUIDE/app.py
+          flet build web -m HubUIDE.app
         elif [ -f "app.py" ]; then
-          flet build web --entry-point app.py
+          flet build web -m app
         else
           echo "Error: No app.py found in expected locations"
           exit 1
@@ -68,20 +61,17 @@ jobs:
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: web-build-artifact  # the name of the artifact
+        name: web-build-artifact
         path: build/web
 
   deploy:
-    needs: build  # wait for the "build" job to get done before executing this "deploy" job
-
+    needs: build
     runs-on: ubuntu-latest
 
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
+      pages: write
+      id-token: write
 
-    # Deploy to the github-pages environment
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -91,7 +81,7 @@ jobs:
         uses: actions/configure-pages@v5
         
       - name: Deploy to GitHub Pages 🚀
-        if: github.event_name == 'push'  # deploy only on push
+        if: github.event_name == 'push'
         id: deployment
         uses: actions/deploy-pages@v4
         with:
