--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -19,7 +19,7 @@ env:
   BUILD_NUMBER: 1
   BUILD_VERSION: 1.0.0
   PYTHON_VERSION: 3.12.2
-  
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -38,7 +38,12 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install flet-cli==0.25.0
-  
+
+    - name: Setup Flutter  # 🔹 Agregamos instalación de Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: "3.22.2"
+
     - name: Debug Directory Structure
       run: |
         echo "Current directory contents:"
