--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -36,10 +36,11 @@ jobs:
     - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install cffi==1.16.0  # 🔹 Instalamos la versión compatible de `cffi`
         pip install -r requirements.txt
         pip install flet-cli==0.25.0
 
-    - name: Setup Flutter  # 🔹 Se requiere Flutter para `flet build web`
+    - name: Setup Flutter  # 🔹 Flet necesita Flutter para compilar web
       uses: subosito/flutter-action@v2
       with:
         flutter-version: "3.22.2"
