--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -1,4 +1,4 @@
-name: Web Build + Deployment to GitHub Pages 
+name: Web Build + Deployment to GitHub Pages
 
 on:
   push:
@@ -23,7 +23,6 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -36,14 +35,9 @@ jobs:
     - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install cryptography==42.0.5  # 🔹 Instalamos la versión compatible de `cryptography`
+        pip install wheel setuptools
+        pip install flet
         pip install -r requirements.txt
-        pip install flet-cli==0.25.0
-
-    - name: Setup Flutter  # 🔹 Flet necesita Flutter para compilar web
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: "3.22.2"
 
     - name: Debug Directory Structure
       run: |
@@ -51,21 +45,21 @@ jobs:
         ls -la
         echo "Full repository structure:"
         find . -type f
+        echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}"
 
-    - name: Flet Build Web
+    - name: Build Web App
       run: |
-        echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}, USER: ${GITHUB_REPOSITORY%/*}, PROJECT_BASE_URL: ${GITHUB_REPOSITORY#*/}"
         if [ -f "HubUIDE/app.py" ]; then
-          flet build web --module-name HubUIDE.app
+          python HubUIDE/app.py -w
         elif [ -f "app.py" ]; then
-          flet build web --module-name app
+          python app.py -w
         else
           echo "Error: No app.py found in expected locations"
           exit 1
         fi
 
     - name: Upload Artifact
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-pages-artifact@v4
       with:
         name: web-build-artifact
         path: build/web
@@ -73,11 +67,9 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
-
     permissions:
       pages: write
       id-token: write
-
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
