--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -34,18 +34,18 @@ jobs:
         python-version: ${{ env.PYTHON_VERSION }}
 
     - name: Install Python Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install cryptography==42.0.5  # 🔹 Instalamos la versión compatible de `cryptography`
-        
-        # 🔹 Instalamos dependencias sin `google-crc32c`
-        pip install -r requirements.txt --no-deps
-        
-        # 🔹 Instalamos `google-cloud-storage` sin dependencias opcionales
-        pip install --no-binary=:all: google-cloud-storage
-        
-        # 🔹 Instalamos flet-cli
-        pip install flet-cli==0.25.0
+        run: |
+          python -m pip install --upgrade pip
+          pip install cryptography==42.0.5  # 🔹 Instalamos la versión compatible de `cryptography`
+          
+          # 🔹 Instalamos todas las dependencias sin dependencias opcionales
+          pip install -r requirements.txt --no-deps
+          
+          # 🔹 Instalamos google-cloud-storage sin google-crc32c
+          pip install --no-binary=:all: google-cloud-storage
+          
+          # 🔹 Instalamos flet-cli
+          pip install flet-cli==0.25.0
 
     - name: Setup Flutter  # 🔹 Flet necesita Flutter para compilar web
       uses: subosito/flutter-action@v2
