--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -32,57 +32,61 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ env.PYTHON_VERSION }}
-        cache: 'pip'  # Habilita caché para acelerar instalación de dependencias
+        cache: 'pip'
 
     - name: Install Python Dependencies
       run: |
-        echo "🔹 Actualizando pip y herramientas de instalación..."
+        echo "🔹 Updating pip and installation tools..."
         python -m pip install --upgrade pip setuptools wheel
 
-        echo "🔹 Instalando dependencias esenciales..."
-        pip install cryptography==42.0.5
+        echo "🔹 Installing base dependencies..."
+        pip install \
+          cryptography==42.0.5 \
+          protobuf==4.25.2 \
+          google-api-core==2.17.1 \
+          google-auth==2.27.0 \
+          google-cloud-core==2.4.1 \
+          google-crc32c==1.5.0
 
-        echo "🔹 Instalando dependencias base sin dependencias opcionales..."
-        pip install --no-deps google-api-core google-cloud-core google-auth protobuf
+        echo "🔹 Installing google-cloud-storage..."
+        pip install google-cloud-storage==2.14.0
 
-        echo "🔹 Instalando google-cloud-storage sin dependencias problemáticas..."
-        pip install --no-deps google-cloud-storage
-
-        echo "🔹 Instalando el resto de dependencias..."
+        echo "🔹 Installing remaining dependencies..."
         pip install -r requirements.txt --prefer-binary
 
-        echo "🔹 Instalando Flet y CLI..."
-        pip install flet-cli==0.25.0 flet
+        echo "🔹 Installing Flet and CLI..."
+        pip install flet-cli==0.25.0 flet==0.20.2
 
     - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
         flutter-version: "3.22.2"
+        cache: true
 
-    - name: Debug Directory Structure
+    - name: Install Flutter Web Dependencies
       run: |
-        echo "📂 Current directory contents:"
+        flutter config --no-analytics
+        flutter pub get
+
+    - name: Debug Environment
+      run: |
+        echo "📂 Directory structure:"
         ls -la
-        echo "📂 Full repository structure:"
-        find . -type f
-        echo "🐍 Installed Python packages:"
-        pip list --format=columns
+        echo "🐍 Python packages:"
+        pip list
+        echo "📱 Flutter doctor:"
+        flutter doctor -v
 
     - name: Flet Build Web
       run: |
         echo "🚀 Building Web App..."
-        echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}, USER: ${GITHUB_REPOSITORY%/*}, PROJECT_BASE_URL: ${GITHUB_REPOSITORY#*/}"
-
-        # Deshabilitar analíticas de Flutter para evitar logs innecesarios
-        flutter config --no-analytics
-
-        # Verificar que app.py exista antes de intentar compilar
         if [ -f "HubUIDE/app.py" ]; then
           flet build web --module-name HubUIDE.app
         elif [ -f "app.py" ]; then
           flet build web --module-name app
         else
-          echo "❌ Error: No se encontró un archivo app.py en ubicaciones esperadas"
+          echo "❌ Error: app.py not found in expected locations"
+          find . -name "app.py"
           exit 1
         fi
 
@@ -95,7 +99,7 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
-
+    
     permissions:
       pages: write
       id-token: write
