--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,38 +1,34 @@
-name: Deploy Flet Web App to GitHub Pages
+name: Deploy Flet App to GitHub Pages
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
-
-permissions:
-  contents: write
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
+      - name: Set up Python
+        uses: actions/setup-python@v3
         with:
           python-version: '3.10'
 
       - name: Install Flet
-        run: |
-          pip install flet
+        run: pip install flet
 
-      - name: Build Flet web app
-        run: |
-          flet build web
+      - name: Run Flet App
+        run: python "C:\\Users\\anper\\Downloads\\HubUIDE\\HubUIDE\\app.py"
+
+      - name: Build Flet App for Web
+        run: flet build web
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          branch: gh-pages
-          folder: build/web
-          clean: true
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build/web
