--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,90 @@
-name: Deploy Flet App to GitHub Pages
+name: Web Build + Deployment to GitHub Pages 
 
 on:
   push:
-    branches:
+    branches: 
+      - master
       - main
+  pull_request:
+    branches: 
+      - master
+      - main
+  workflow_dispatch:
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
+env:
+  BUILD_NUMBER: 1
+  BUILD_VERSION: 1.0.0
+  PYTHON_VERSION: 3.12.2
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v3
+    - name: Setup Python ${{ env.PYTHON_VERSION }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ env.PYTHON_VERSION }}
+
+    - name: Setup Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: "3.22.2"
+
+    - name: Debug Directory Structure
+      run: |
+        echo "Current directory contents:"
+        ls -la
+        echo "Full repository structure:"
+        find . -type f
+        echo "Python packages installed:"
+        pip list
+
+    - name: Flet Build Web
+      run: |
+        echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}, USER: ${GITHUB_REPOSITORY%/*}, PROJECT_BASE_URL: ${GITHUB_REPOSITORY#*/}"
+        flutter config --no-analytics
+        if [ -f "HubUIDE/app.py" ]; then
+          flet build web --module-name HubUIDE.app
+        elif [ -f "app.py" ]; then
+          flet build web --module-name app
+        else
+          echo "Error: No app.py found in expected locations"
+          exit 1
+        fi
+
+    - name: Upload Artifact
+      uses: actions/upload-pages-artifact@v3
+      with:
+        name: web-build-artifact
+        path: build/web
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+      
+    steps:
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+        
+      - name: Deploy to GitHub Pages 🚀
+        if: github.event_name == 'push'
+        id: deployment
+        uses: actions/deploy-pages@v4
         with:
-          python-version: '3.10'
-
-      - name: Install Flet
-        run: pip install flet
-
-      - name: Run Flet App
-        run: python "C:\\Users\\anper\\Downloads\\HubUIDE\\HubUIDE\\app.py"
-
-      - name: Build Flet App for Web
-        run: flet build web
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build/web
+          artifact_name: web-build-artifact
