--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,90 +1,48 @@
-name: Web Build + Deployment to GitHub Pages 
+name: Deploy Flet Web App to GitHub Pages
 
 on:
   push:
-    branches: 
-      - master
-      - main
-  pull_request:
-    branches: 
-      - master
+    branches:
       - main
   workflow_dispatch:
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
-env:
-  BUILD_NUMBER: 1
-  BUILD_VERSION: 1.0.0
-  PYTHON_VERSION: 3.12.2
+permissions:
+  contents: write
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Setup Python ${{ env.PYTHON_VERSION }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ env.PYTHON_VERSION }}
-
-    - name: Setup Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: "3.22.2"
-
-    - name: Debug Directory Structure
-      run: |
-        echo "Current directory contents:"
-        ls -la
-        echo "Full repository structure:"
-        find . -type f
-        echo "Python packages installed:"
-        pip list
-
-    - name: Flet Build Web
-      run: |
-        echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}, USER: ${GITHUB_REPOSITORY%/*}, PROJECT_BASE_URL: ${GITHUB_REPOSITORY#*/}"
-        flutter config --no-analytics
-        if [ -f "HubUIDE/app.py" ]; then
-          flet build web --module-name HubUIDE.app
-        elif [ -f "app.py" ]; then
-          flet build web --module-name app
-        else
-          echo "Error: No app.py found in expected locations"
-          exit 1
-        fi
-
-    - name: Upload Artifact
-      uses: actions/upload-pages-artifact@v3
-      with:
-        name: web-build-artifact
-        path: build/web
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-
-    permissions:
-      pages: write
-      id-token: write
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-      
-    steps:
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-        
-      - name: Deploy to GitHub Pages 🚀
-        if: github.event_name == 'push'
-        id: deployment
-        uses: actions/deploy-pages@v4
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
-          artifact_name: web-build-artifact
+          python-version: '3.10'
+
+      - name: Install Flet
+        run: |
+          pip install flet
+
+          - name: Flet Build Web
+          run: |
+            echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}, USER: ${GITHUB_REPOSITORY%/*}, PROJECT_BASE_URL: ${GITHUB_REPOSITORY#*/}"
+            flutter config --no-analytics
+            if [ -f "HubUIDE/app.py" ]; then
+              flet build web --module-name HubUIDE.app
+            elif [ -f "app.py" ]; then
+              flet build web --module-name app
+            else
+              echo "Error: No app.py found in expected locations"
+              exit 1
+            fi
+    
+
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: gh-pages
+          folder: build/web
+          clean: true
