--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,22 +23,20 @@ jobs:
           python-version: '3.10'
 
       - name: Install Flet
-        run: |
-          pip install flet
+        run: pip install flet
 
-          - name: Flet Build Web
-          run: |
-            echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}, USER: ${GITHUB_REPOSITORY%/*}, PROJECT_BASE_URL: ${GITHUB_REPOSITORY#*/}"
-            flutter config --no-analytics
-            if [ -f "HubUIDE/app.py" ]; then
-              flet build web --module-name HubUIDE.app
-            elif [ -f "app.py" ]; then
-              flet build web --module-name app
-            else
-              echo "Error: No app.py found in expected locations"
-              exit 1
-            fi
-    
+      - name: Flet Build Web
+        run: |
+          echo "GITHUB_REPOSITORY: ${GITHUB_REPOSITORY}, USER: ${GITHUB_REPOSITORY%/*}, PROJECT_BASE_URL: ${GITHUB_REPOSITORY#*/}"
+          flutter config --no-analytics
+          if [ -f "C:/Users/anper/Downloads/HubUIDE/HubUIDE/app.py" ]; then
+            flet build web --module-name HubUIDE.app
+          elif [ -f "app.py" ]; then
+            flet build web --module-name app
+          else
+            echo "Error: No app.py found in expected locations"
+            exit 1
+          fi
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
