--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,11 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Instalar Git LFS
+        run: |
+          sudo apt-get install git-lfs
+          git lfs install
+
       - name: Install Flet
         run: pip install flet
 
